--- a/css/styles.css
+++ b/css/styles.css
@@ -521,8 +521,7 @@ body {
   overflow: hidden;
 }
 
-.examples-thumb::before {
-  content: "";
+.examples-overlay {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -574,14 +573,8 @@ body {
   margin-bottom: 0;
 }
 
-.examples .link:hover .examples-thumb::before,
-.examples .link:focus .examples-thumb::before {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.examples .link:hover .description,
-.examples .link:focus .description {
+.examples .link:hover .examples-overlay,
+.examples .link:focus .examples-overlay {
   opacity: 1;
   transform: translateY(0);
 }
@@ -614,12 +607,6 @@ body {
   letter-spacing: 0.03em;
 
   color: #ffffff;
-
-  opacity: 0;
-  transform: translateY(231px);
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* projects */
