--- a/css/styles.css
+++ b/css/styles.css
@@ -763,6 +763,27 @@ body {
   align-items: baseline;
 }
 
+.subscription {
+  justify-content: center;
+}
+
+.subscription-title {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 20px;
+  margin-left: 93px;
+
+  color: #ffffff;
+}
+
+.form-input {
+}
+
 .social {
   display: flex;
   justify-content: center;
