--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ body {
   letter-spacing: 0.03em;
 }
 
+textarea {
+  resize: none;
+}
+
 .container {
   width: 1200px;
   margin-left: auto;
@@ -759,12 +763,16 @@ body {
 }
 
 .bottom {
+  /* position: relative; */
   display: flex;
   align-items: baseline;
 }
 
 .subscription {
-  justify-content: center;
+  width: 570px;
+  height: 86px;
+
+  margin-left: 93px;
 }
 
 .subscription-title {
@@ -776,12 +784,85 @@ body {
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 20px;
-  margin-left: 93px;
+  /* margin-left: 93px; */
 
   color: #ffffff;
 }
 
+.form-subscription {
+  /* outline: transparent; */
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form-field {
+  position: relative;
+}
+
+.form-field label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 15px;
+  padding-right: 0;
+  padding-bottom: 15px;
+  padding-left: 16px;
+
+  /* display: flex;
+  align-items: center; */
+  letter-spacing: 0.03em;
+
+  font-family: "Roboto";
+  font-size: 16px;
+  line-height: 1.25;
+
+  color: rgba(255, 255, 255, 0.6);
+  z-index: 1;
+}
+
 .form-input {
+  width: 358px;
+  height: 50px;
+  padding: 0;
+  margin: 0;
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  color: #ffffff;
+}
+
+.button-sub {
+  width: 200px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: var(--accent-color);
+  color: #ffffff;
+  padding: 0;
+
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+
+  letter-spacing: 0.06em;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+  cursor: pointer;
+}
+
+.icon-subscription {
+  margin-left: 10px;
+  fill: #ffffff;
 }
 
 .social {
@@ -915,11 +996,23 @@ body {
 
   min-width: 528px;
   min-height: 581px;
+  padding: 40px;
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.modal-title {
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
 }
 
 .modal-close {
@@ -936,6 +1029,36 @@ body {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+}
+
+.contract {
+  color: var(--accent-color);
+}
+
+.contract-link {
+  text-decoration-color: var(--accent-color);
+}
+
+.modal-form {
+  width: 448px;
+  outline: 1px solid red;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modal-field {
+  display: flex;
+  flex-direction: column;
+  outline: 1px solid teal;
+  margin-bottom: 28px;
+}
+
+.modal-label {
+  margin-bottom: 4px;
+}
+
+.modal-input {
+  height: 40px;
 }
 
 .icon-close {
