--- a/css/styles.css
+++ b/css/styles.css
@@ -810,8 +810,6 @@ textarea {
   padding-bottom: 15px;
   padding-left: 16px;
 
-  /* display: flex;
-  align-items: center; */
   letter-spacing: 0.03em;
 
   font-family: "Roboto";
@@ -836,6 +834,33 @@ textarea {
 }
 
 .button-sub {
+  width: 200px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: var(--accent-color);
+  color: #ffffff;
+  padding: 0;
+
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+
+  letter-spacing: 0.06em;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+  cursor: pointer;
+}
+
+.button-submit {
+  margin-right: 0;
+
   width: 200px;
   height: 50px;
 
