--- a/css/styles.css
+++ b/css/styles.css
@@ -763,7 +763,6 @@ textarea {
 }
 
 .bottom {
-  /* position: relative; */
   display: flex;
   align-items: baseline;
 }
@@ -784,14 +783,13 @@ textarea {
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 20px;
-  /* margin-left: 93px; */
 
   color: #ffffff;
 }
 
-.form-subscription {
-  /* outline: transparent; */
+/* form-subscription */
 
+.form-subscription {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -801,14 +799,29 @@ textarea {
   position: relative;
 }
 
-.form-field label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding-top: 15px;
-  padding-right: 0;
-  padding-bottom: 15px;
+.form-input {
+  width: 358px;
+  height: 50px;
   padding-left: 16px;
+  margin: 0;
+
+  font-family: "Roboto";
+  font-size: 16px;
+  line-height: 1.25;
+
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  color: #ffffff;
+}
+
+.form-label {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
 
   letter-spacing: 0.03em;
 
@@ -817,20 +830,12 @@ textarea {
   line-height: 1.25;
 
   color: rgba(255, 255, 255, 0.6);
-  z-index: 1;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input {
-  width: 358px;
-  height: 50px;
-  padding: 0;
-  margin: 0;
-  background-color: #2f303a;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-
-  color: #ffffff;
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+  transform: translate(-150%, -50%);
 }
 
 .button-sub {
@@ -1056,6 +1061,30 @@ textarea {
   border-radius: 50%;
 }
 
+.icon-close {
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  cursor: pointer;
+}
+
+.modal-close:hover .icon-close,
+.modal-close:focus .icon-close {
+  fill: var(--accent-color);
+}
+
+.icon-form {
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-form:hover {
+  fill: var(--accent-color);
+}
+
 .contract {
   color: var(--accent-color);
 }
@@ -1066,7 +1095,7 @@ textarea {
 
 .modal-form {
   width: 448px;
-  outline: 1px solid red;
+
   margin-left: auto;
   margin-right: auto;
 }
@@ -1074,7 +1103,7 @@ textarea {
 .modal-field {
   display: flex;
   flex-direction: column;
-  outline: 1px solid teal;
+
   margin-bottom: 28px;
 }
 
@@ -1084,6 +1113,32 @@ textarea {
 
 .modal-input {
   height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:hover,
+.modal-input:focus-within {
+  border-color: var(--accent-color);
+  cursor: pointer;
+}
+
+.comment {
+  padding: 12px 16px;
+  font-family: "Roboto";
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.comment:hover,
+.comment:focus-within {
+  border-color: var(--accent-color);
+  cursor: pointer;
 }
 
 .icon-close {
