--- a/css/styles.css
+++ b/css/styles.css
@@ -864,7 +864,8 @@ textarea {
 }
 
 .button-submit {
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
 
   width: 200px;
   height: 50px;
@@ -1025,7 +1026,7 @@ textarea {
   transform: translate(-50%, -50%);
 
   min-width: 528px;
-  min-height: 581px;
+  /* min-height: 581px; */
   padding: 40px;
 
   background: #ffffff;
@@ -1043,6 +1044,9 @@ textarea {
   letter-spacing: 0.03em;
 
   color: #212121;
+
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .modal-close {
@@ -1077,12 +1081,12 @@ textarea {
 }
 
 .icon-form {
+  position: absolute;
+  top: 55%;
+  left: 15px;
+
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-form:hover {
-  fill: var(--accent-color);
 }
 
 .contract {
@@ -1101,42 +1105,131 @@ textarea {
 }
 
 .modal-field {
+  position: relative;
   display: flex;
   flex-direction: column;
-
-  margin-bottom: 28px;
 }
 
 .modal-label {
+  margin-top: 12px;
   margin-bottom: 4px;
+  font-family: "Roboto";
+
+  font-size: 12px;
+  line-height: 1.16;
+
+  letter-spacing: 0.01em;
+
+  color: #757575;
 }
 
 .modal-input {
+  padding: 0;
+  padding-left: 42px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 
-.modal-input:hover,
-.modal-input:focus-within {
-  border-color: var(--accent-color);
+.modal-field:focus-within .icon-form {
+  fill: var(--accent-color);
+}
+
+.modal-field:focus-within .modal-input {
+  border: 1px solid var(--accent-color);
   cursor: pointer;
+}
+.checkbox-field {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.check-description {
+  font-family: "Roboto";
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+
+.checkbox-input {
+  appearance: none;
+}
+
+.custom-check-input {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  margin-right: 7px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-input:checked + .custom-check-input .icon-check {
+  opacity: 1;
+}
+
+.checkbox-input:checked + .custom-check-input {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.checkbox-input:focus + .custom-check-input {
+  border-color: var(--accent-color);
+}
+
+.icon-check {
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comment {
   padding: 12px 16px;
   font-family: "Roboto";
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: var(--text-color);
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  outline: transparent;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment::placeholder {
+  font-family: "Roboto";
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
 }
-.comment:hover,
-.comment:focus-within {
+
+.comment:focus {
   border-color: var(--accent-color);
   cursor: pointer;
 }
