--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,6 @@ textarea {
   margin-bottom: 0;
   padding-right: 15px;
   padding-left: 15px;
-
-  /* outline: 1px solid red; */
 }
 
 .list {
@@ -425,16 +423,16 @@ textarea {
 }
 
 .icon-antenna::before {
-  background-image: url(../images/svg/antenna.svg);
+  background-image: url(../images/svg/SVG/antenna.svg);
 }
 .icon-clock::before {
-  background-image: url(../images/svg/clock.svg);
+  background-image: url(../images/svg/SVG/clock.svg);
 }
 .icon-diagram::before {
-  background-image: url(../images/svg/diagram.svg);
+  background-image: url(../images/svg/SVG/diagram.svg);
 }
 .icon-astronaut::before {
-  background-image: url(../images/svg/astronaut.svg);
+  background-image: url(../images/svg/SVG/astronaut.svg);
 }
 
 .skills-title {
@@ -1080,10 +1078,16 @@ textarea {
   fill: var(--accent-color);
 }
 
+.modal-icon {
+  display: flex;
+  position: relative;
+}
+
 .icon-form {
   position: absolute;
-  top: 55%;
+  top: 50%;
   left: 15px;
+  transform: translateY(-50%);
 
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1126,6 +1130,8 @@ textarea {
 .modal-input {
   padding: 0;
   padding-left: 42px;
+  width: 100%;
+
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -1149,6 +1155,14 @@ textarea {
 
   margin-top: 20px;
   margin-bottom: 30px;
+  margin-left: 12px;
+}
+
+.checkbox-label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 8px;
 }
 
 .check-description {
@@ -1170,7 +1184,6 @@ textarea {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  margin-right: 7px;
 
   display: flex;
   justify-content: center;
@@ -1204,6 +1217,9 @@ textarea {
 }
 
 .comment {
+  width: 448px;
+  height: 120px;
+
   padding: 12px 16px;
   font-family: "Roboto";
   font-size: 14px;
